# SmartHVAC

./: .deploy.env.sample  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  agents.md  claude.md  pyproject.toml  requirements_test.txt
docs/: 00-PROJECT-INSTRUCTIONS.md  01-STRATEGY-AND-DESIGN.md  02-ARCHITECTURE-REFERENCE.md  03-HA-AUTOMATION-UI-GUIDE.md  04-BRIEFING-EXAMPLES.md  05-LEARNING-ENGINE-DESIGN.md  06-LOGGING-GUIDELINES.md  07-AUTOMATION-FLOWCHART.md  08-COMPUTATION-REFERENCE.md  09-DEBUGGING-GUIDE.md  DEVELOPMENT.md  HA-BOUNDARY-EXCEPTIONS.md  SSH-SETUP.md  ai-skills-spec.md  briefing-spec.md  chart-log-spec.md  forecast-pipeline-spec.md  grace-periods-spec.md  rest-api.md  state-persistence.md  temperature-conversion.md  thermal-model-v3-spec.md
tests/: conftest.py  test_action_tracking.py  test_activity_report.py  test_adaptive_preheat.py  test_adaptive_setback.py  test_adaptive_toggles.py  test_ai_activity.py  test_ai_investigator.py  test_api.py  test_briefing.py  test_cancel_override.py  test_celsius_unit_correctness.py  test_chart_historical_nav.py  test_chart_log.py  test_chart_setpoint.py  test_classifier.py  test_claude_api.py  test_config_flow.py  test_config_metadata.py  test_const.py  test_contact_status.py  test_coordinator.py  test_coordinator_chart.py  test_coordinator_retry.py  test_coordinator_violations.py  test_daily_record.py  test_daily_record_accuracy.py  test_dashboard_window_display.py  test_deploy_security.py  test_door_window.py  test_dry_run.py  test_dual_estimator.py  test_economizer.py  test_fan_control.py  (+40 more)
(+96 files in other folders)
