[project]
name = "climate-advisor"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [".claude"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "T20"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T20"]
"tools/*" = ["T20"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
